# esp-compressor

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  library.json  library.properties
.github/workflows/: ci.yml  release.yml
examples/basic_roundtrip/: basic_roundtrip.ino
examples/file_roundtrip/: file_roundtrip.ino
examples/stream_roundtrip/: stream_roundtrip.ino
src/: ESPCompressor.h  ESPCompressorFormat.h
src/esp_compressor/async/: compressor.cpp  compressor.h
src/esp_compressor/codec/: codec.cpp  codec.h
src/esp_compressor/format/: esc_format.cpp  esc_format.h
src/esp_compressor/io/: compression_io.cpp  compression_io.h
src/esp_compressor/types/: compression_types.h
src/esp_compressor/util/: compat.h  fs_utils.cpp  fs_utils.h  memory_buffer.cpp  memory_buffer.h
test/: CMakeLists.txt  esp_compressor_tests.cpp
test/stubs/: Arduino.h  ESPBufferManager.h  FS.h
